bugfix 'app-component' styles: fix unintentional horizontal wrappinng

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,10 +1,6 @@
 .container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  /* flex-direction: column; */
-  /* align-items: center; */
-  width: 100%;
+  display: block;
+  /* width: 100%; */
   margin: 0 auto;
   /* display: grid;
   grid-template-columns: 1fr auto 1fr;
